[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sahiixx-bus"
version = "0.1.0"
description = "Unified orchestration layer for the SAHIIXX ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "fastapi>=0.110",
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23",
    "pytest>=8.0",
    "respx>=0.22",
    "pytest-cov>=5.0",
]

[project.scripts]
sahiixx_bus = "sahiixx_bus.server:main"
